--- a/client/src/3-ImagePreview/Preview.module.css
+++ b/client/src/3-ImagePreview/Preview.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-flow: column nowrap;
   gap: 10px;
-  margin-inline: 10px;
+  margin-right: 10px;
 }
 
 .main-preview {
