--- a/client/src/4-Q&A/q&a.css
+++ b/client/src/4-Q&A/q&a.css
@@ -1,5 +1,7 @@
 .qa {
   font-family: sans-serif;
+  width: 100%;
+  margin: 0px;
 }
 
 .qa__search-label {
