--- a/client/src/7-Footer/Footer.css
+++ b/client/src/7-Footer/Footer.css
@@ -1,11 +1,11 @@
 .container {
   width: 100vw;
   max-width: 100%;
+  min-width: 1000px;
   display: flex;
   flex-direction: column;
   background-color: #232f3e;
   color: #ffffff;
-  align-items: center;
   padding: 0;
   margin: 0;
   margin-top: 40px;
@@ -15,7 +15,9 @@
   justify-content: center;
   vertical-align: center;
   padding: 16px;
-  width: 100%;
+  width: 100vw;
+  max-width: 100%;
+  min-width: 1000px;
   display: inherit;
   font-size: 13px;
   background-color: #37475a;
@@ -60,6 +62,9 @@
   height: 405px;
   margin-top: 30px;
   margin-bottom: 30px;
+  width: 100vw;
+  max-width: 100%;
+  min-width: 1000px;
 }
 .mid-footer {
   height: 100px;
@@ -67,6 +72,9 @@
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  max-width: 100%;
+  min-width: 1000px;
 }
 .buttons {
   font-size: 10px;
